# cppspace

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  VIBE.md  fix_issue_1.txt  manage_issues.sh  vibe_conventions.md
.github/workflows/: ci-cd.yml
src/: InputSubsystem.cpp  InputSubsystem.h  Scene.h  main.cpp
